--- a/laptop_setup/roles/gnome/tasks/main.yml
+++ b/laptop_setup/roles/gnome/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+# tasks file for gnome
 - name: install gnome
   pacman: name=gnome state=present
   become: true
@@ -10,3 +11,29 @@
 - name: enable gdm
   service: name=gdm enabled=yes
   become: true
+
+- name: ensure dconf/user.d directory exists
+  file:
+    path: '{{ ansible_user_dir }}/.config/dconf/user.d'
+    recurse: yes
+    state: directory
+  become: true
+  become_user: '{{ username }}'
+
+- name: add dconf files
+  copy:
+    src: 'files/{{ item }}'
+    dest: '{{ ansible_user_dir }}/.config/dconf/user.d/{{ item }}'
+    owner: '{{ username }}'
+    group: users
+    mode: 0644
+  notify: dconf load
+  become: true
+  become_user: '{{ username }}'
+  with_items:
+    - interface.conf
+    - keyboard.conf
+    - nautilus.conf
+    - touchpad.conf
+
+- meta: flush_handlers
