Update zsh and gnome role

--- a/laptop_setup/roles/gnome/tasks/main.yml
+++ b/laptop_setup/roles/gnome/tasks/main.yml
@@ -34,6 +34,12 @@
     - interface.conf
     - keyboard.conf
     - nautilus.conf
+    - terminal.conf
     - touchpad.conf
 
 - meta: flush_handlers
+
+  #- name: setup gtk3
+  #  copy:
+  #    src:
+  #    dest:
