--- a/laptop_setup/roles/gnome/files/terminal.conf
+++ b/laptop_setup/roles/gnome/files/terminal.conf
@@ -1,6 +1,7 @@
 [org/gnome/terminal/legacy]
 menu-accelerator-enabled=false
 default-show-menubar=false
+confirm-close=false
 
 [org/gnome/terminal/legacy/profiles:/:b1dcc9dd-5262-4d8d-a863-c897e6d979b9]
 foreground-color='rgb(208,208,208)'
