Update gnome-terminal conf

--- a/laptop_setup/roles/gnome/files/terminal.conf
+++ b/laptop_setup/roles/gnome/files/terminal.conf
@@ -10,7 +10,6 @@ rewrap-on-resize=true
 palette=['rgb(46,52,54)', 'rgb(150,0,80)', 'rgb(0,128,0)', 'rgb(255,69,0)', 'rgb(0,90,156)', 'rgb(128,0,128)', 'rgb(53,121,168)', 'rgb(208,208,208)', 'rgb(70,84,87)', 'rgb(249,38,114)', 'rgb(11,218,81)', 'rgb(230,219,116)', 'rgb(30,144,255)', 'rgb(153,102,204)', 'rgb(30,144,255)', 'rgb(248,248,242)']
 scrollbar-policy='never'
 visible-name='Koaxiel'
-scrollback-lines=100000
 cursor-background-color='rgb(255,69,0)'
 cursor-shape='underline'
 cursor-colors-set=true
@@ -19,6 +18,7 @@ use-system-font=false
 use-theme-colors=false
 cursor-foreground-color='rgb(255,69,0)'
 font='Droid Sans Mono 6'
+scrollback-unlimited=true
 bold-color-same-as-fg=false
 bold-color='rgb(30,144,255)'
 background-color='rgb(18,18,18)'
