--- a/laptop_setup/roles/gnome/files/settings.ini
+++ b/laptop_setup/roles/gnome/files/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Adapta-Nokto
 gtk-icon-theme-name=Paper
-gtk-font-name=Droid Sans 8
+gtk-font-name=Droid Sans 6
 gtk-cursor-theme-size=0
 gtk-cursor-theme-name=Paper
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
@@ -14,3 +14,4 @@ gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
+gtk-application-prefer-dark-theme=0
