--- a/laptop_setup/roles/i3/files/i3status.conf
+++ b/laptop_setup/roles/i3/files/i3status.conf
@@ -7,75 +7,75 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-        colors          = true
-        interval        = 5
-        color_good      = "#66aa11"
-        color_degraded  = "#ff4500"
-        color_bad       = "#ff0090"
+  colors          = true
+  interval        = 5
+  color_good      = "#0BDA51"
+  color_degraded  = "#FF4500"
+  color_bad       = "#F92672"
 }
 
-order += "disk /home"
-order += "cpu_usage"
-#order += "run_watch DHCP"
-#order += "run_watch VPN"
-order += "battery 0"
+order += "weather_yahoo"
+order += "spotify"
 order += "ipv6"
-order += "wireless wlp3s0"
-order += "ethernet enp0s25"
-#order += "path_exists VPN"
-#order += "load"
-order += "tztime local"
+order += "wireless _first_"
+order += "ethernet _first_"
+order += "load"
+order += "sysdata"
+order += "disk /"
+order += "backlight"
 order += "volume master"
+order += "battery_level"
+order += "time"
 
-wireless wlp3s0 {
-        format_up = "WiFi: %ip (%quality vers %essid)"
-        format_down = ""
+backlight {
+  format = "☼ {level}%"
 }
 
-ethernet enp0s25 {
-        # if you use %speed, i3status requires root privileges
-        format_up = "Ether: %ip (%speed)"
-        format_down = ""
+battery_level {
+  battery_id = "all"
+  format = "{icon} {percent}% {time_remaining}"
 }
 
-battery 0 {
-        format = "%status %percentage %remaining"
+time {
+  format = "%a %d %B, %H:%M"
 }
 
-run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
+wireless _first_ {
+  format_up = "⇵ %quality at %essid, %bitrate / %frequency ⇌ %ip"
+  format_down = ''
 }
 
-run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
-}
-
-path_exists VPN {
-        # path exists when a VPN tunnel launched by nmcli/nm-applet is active
-        path = "/proc/sys/net/ipv4/conf/tun0"
-        format = "%title: %status"
-}
-
-tztime local {
-        format = "%a %d %B, %H:%M"
+ethernet _first_ {
+  format_up = "⇵ %ip"
+  format_down = ''
 }
 
 load {
-        format = "%1min"
+  format = "∞ %1min %5min"
+  max_threshold = "3"
 }
 
-disk "/home" {
-        format = "/home %percentage_used used"
-}
-
-cpu_usage {
-        format = "CPU: %usage"
+disk "/" {
+  format = "⛁ %percentage_used"
 }
 
 volume master {
-        format = "♪ %volume"
-        format_muted = "♪: muted (%volume)"
-        device = "default"
-        mixer = "Master"
-        mixer_idx = 0
+  format = "♪ %volume"
+  format_muted = "♪ muted (%volume)"
+  device = "default"
+}
+
+spotify {
+  format = "♫ {artist} : {title}"
+  format_down = ''
+}
+
+sysdata {
+  format = "[\?color=cpu ⚙ {cpu_usage}%] [\?color=temp ♨ {cpu_temp}] [\?color=mem ◔ {mem_used_percent}%]"
+}
+
+weather_yahoo {
+  woeid = 615702
+  format = "{today}"
+  format_today = "{icon} {temp}°{units} {text}"
 }
