--- a/laptop_setup/roles/i3/files/i3status.conf
+++ b/laptop_setup/roles/i3/files/i3status.conf
@@ -20,24 +20,60 @@ order += "ipv6"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "load"
-order += "sysdata"
+#order += "sysdata"
+order += "cpu_usage"
+order += "cpu_temperature 0"
 order += "disk /"
 order += "backlight"
 order += "volume master"
 order += "battery_level"
+#order += "battery 0"
+#order += "battery 1"
 order += "time"
 
 backlight {
   format = "☼ {level}%"
+  format_down = ''
 }
 
 battery_level {
   battery_id = "all"
   format = "{icon} {percent}% {time_remaining}"
+  format_down = ''
+}
+
+battery 0 {
+        format = "%status %percentage %remaining %emptytime"
+        format_down = ''
+        status_chr = "⚇ CHR"
+        status_bat = "⚡ BAT"
+        status_full = "☻ FULL"
+        path = "/sys/class/power_supply/BAT%d/uevent"
+        low_threshold = 10
+}
+
+battery 1 {
+        format = "%status %percentage %remaining %emptytime"
+        format_down = ''
+        status_chr = "⚇ CHR"
+        status_bat = "⚡ BAT"
+        status_full = "☻ FULL"
+        path = "/sys/class/power_supply/BAT%d/uevent"
+        low_threshold = 10
+}
+
+cpu_temperature 0 {
+  format = "♨  %degrees °C"
+  max_threshold = "42"
+  path = '/sys/devices/platform/coretemp.0/hwmon/hwmon3/temp1_input'
 }
 
 time {
   format = "%a %d %B, %H:%M"
+}
+
+ipv6 {
+  format_down = ''
 }
 
 wireless _first_ {
@@ -72,6 +108,7 @@ spotify {
 
 sysdata {
   format = "[\?color=cpu ⚙ {cpu_usage}%] [\?color=temp ♨ {cpu_temp}] [\?color=mem ◔ {mem_used_percent}%]"
+  format_down = ''
 }
 
 weather_yahoo {
