--- a/laptop_setup/roles/gnome/files/settings.ini
+++ b/laptop_setup/roles/gnome/files/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Adapta-Nokto
 gtk-icon-theme-name=Paper
-gtk-font-name=Droid Sans
+gtk-font-name=Droid Sans 8
 gtk-cursor-theme-size=0
 gtk-cursor-theme-name=Paper
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
