--- a/laptop_setup/main.yml
+++ b/laptop_setup/main.yml
@@ -23,8 +23,8 @@
     - { role: gpg, tags: gpg }
     - { role: smart, tags: smart }
     - { role: gnome, tags: gnome }
+    - { role: networkmanager, tags: networkmanager }
     - { role: xserver, tags: xserver }
     - { role: nettool, tags: nettool }
     - { role: xapp, tags: xapp }
     - { role: i3, tags: i3 }
-      #- { role: dirty, tags: dirty }
