--- a/laptop_setup/roles/i3/files/config
+++ b/laptop_setup/roles/i3/files/config
@@ -217,7 +217,7 @@ for_window [class="Slack" instance="slack"] move to workspace Slack
 assign [class="Pidgin"] → 9
 
 #exec nautilus -n
-exec --no-startup-id /usr/lib/notification-daemon-1.0/notification-daemon
+#exec --no-startup-id /usr/lib/mate-notification-daemon/mate-notification-daemon
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nm-applet
 exec --no-startup-id compton -b
