Change droid to noto font

--- a/laptop_setup/roles/gnome/files/terminal.conf
+++ b/laptop_setup/roles/gnome/files/terminal.conf
@@ -17,7 +17,7 @@ highlight-colors-set=true
 use-system-font=false
 use-theme-colors=false
 cursor-foreground-color='rgb(255,69,0)'
-font='Droid Sans Mono 12'
+font='Noto Mono 12'
 scrollback-unlimited=true
 bold-color-same-as-fg=false
 bold-color='rgb(30,144,255)'
