--- a/laptop_setup/roles/i3/files/i3status.conf
+++ b/laptop_setup/roles/i3/files/i3status.conf
@@ -12,64 +12,61 @@ general {
   color_good      = "#0BDA51"
   color_degraded  = "#FF4500"
   color_bad       = "#F92672"
+  markup          = "pango"
 }
 
-order += "weather_yahoo"
-order += "spotify"
-order += "ipv6"
-order += "wireless _first_"
-order += "ethernet _first_"
-order += "load"
-#order += "sysdata"
+#order += "ipv6"
+#order += "ethernet _first_"
 order += "cpu_usage"
+order += "load"
 order += "cpu_temperature 0"
 order += "disk /"
-order += "backlight"
+order += "wireless _first_"
 order += "volume master"
-order += "battery_level"
-#order += "battery 0"
-#order += "battery 1"
-order += "time"
+order += "battery all"
+order += "tztime local"
 
-backlight {
-  format = "☼ {level}%"
+#backlight {
+#  format = "☼ {level}%"
+#  format_down = ''
+#}
+
+#battery_level {
+#  battery_id = "all"
+#  format = "{icon} {percent}% {time_remaining}"
+#  format_down = ''
+#  blocks = 'i'
+#  measurement_mode='acpi'
+#}
+
+battery all {
+  format = "<span font_weight='light' fgcolor='#1E90FF'>%status</span> %percentage %remaining"
   format_down = ''
+  status_chr = ""
+  status_bat = ""
+  status_full = ""
+  path = "/sys/class/power_supply/BAT%d/uevent"
+  threshold_type = 'percentage'
+  low_threshold = 15
+  last_full_capacity = true
+  hide_seconds = true
+  integer_battery_capacity = true
 }
 
-battery_level {
-  battery_id = "all"
-  format = "{icon} {percent}% {time_remaining}"
-  format_down = ''
+tztime local {
+  format_time = "%a %d %B, %H:%M %Z"
+  format = "<span font_weight='light' fgcolor='#1E90FF'></span> %time"
 }
 
-battery 0 {
-        format = "%status %percentage %remaining %emptytime"
-        format_down = ''
-        status_chr = "⚇ CHR"
-        status_bat = "⚡ BAT"
-        status_full = "☻ FULL"
-        path = "/sys/class/power_supply/BAT%d/uevent"
-        low_threshold = 10
+cpu_usage {
+  format = "<span font_weight='light' fgcolor='#1E90FF'></span> %usage"
 }
 
-battery 1 {
-        format = "%status %percentage %remaining %emptytime"
-        format_down = ''
-        status_chr = "⚇ CHR"
-        status_bat = "⚡ BAT"
-        status_full = "☻ FULL"
-        path = "/sys/class/power_supply/BAT%d/uevent"
-        low_threshold = 10
-}
 
 cpu_temperature 0 {
-  format = "♨  %degrees °C"
-  max_threshold = "42"
+  format = "<span font_weight='light' fgcolor='#1E90FF'></span> %degrees°C"
+  max_threshold = "50"
   path = '/sys/devices/platform/coretemp.0/hwmon/hwmon3/temp1_input'
-}
-
-time {
-  format = "%a %d %B, %H:%M"
 }
 
 ipv6 {
@@ -77,8 +74,9 @@ ipv6 {
 }
 
 wireless _first_ {
-  format_up = "⇵ %quality at %essid, %bitrate / %frequency ⇌ %ip"
+  format_up = "<span font_weight='light' fgcolor='#1E90FF'></span>%quality at %essid, %bitrate / %frequency ⇌ %ip"
   format_down = ''
+  color_good = "#D0D0D0"
 }
 
 ethernet _first_ {
@@ -87,32 +85,28 @@ ethernet _first_ {
 }
 
 load {
-  format = "∞ %1min %5min"
+  format = "<span font_weight='light' fgcolor='#1E90FF'> </span> %1min %5min"
   max_threshold = "3"
 }
 
 disk "/" {
-  format = "⛁ %percentage_used"
+  format = "<span font_weight='light' fgcolor='#1E90FF'></span> %percentage_used"
 }
 
 volume master {
-  format = "♪ %volume"
-  format_muted = "♪ muted (%volume)"
+  format = "<span font_weight='light' fgcolor='#1E90FF'></span> %volume"
+  format_muted = "<span font_weight='light' fgcolor='#1E90FF'></span> <span strikethrough='true'>%volume</span>"
+  color_bad = "#F92672"
   device = "default"
+  color_degraded = "#F92672"
 }
 
-spotify {
-  format = "♫ {artist} : {title}"
-  format_down = ''
-}
-
-sysdata {
-  format = "[\?color=cpu ⚙ {cpu_usage}%] [\?color=temp ♨ {cpu_temp}] [\?color=mem ◔ {mem_used_percent}%]"
-  format_down = ''
-}
-
-weather_yahoo {
-  woeid = 615702
-  format = "{today}"
-  format_today = "{icon} {temp}°{units} {text}"
-}
+#spotify {
+#  format = "♫ {artist} : {title}"
+#  format_down = ''
+#}
+#
+#sysdata {
+#  format = "[\?color=cpu ⚙ {cpu_usage}%] [\?color=temp ♨ {cpu_temp}] [\?color=mem ◔ {mem_used_percent}%]"
+#  format_down = ''
+#}
